<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_first"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/buttonToSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_second"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint"
        android:layout_below="@id/buttonToSecond"
        android:layout_marginTop="16dp"
        android:padding="12dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        android:layout_below="@id/editText"
        android:layout_marginTop="16dp" />

</RelativeLayout>
